// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api request should execute a GET successfully 1`] = `
Object {
  "hello": "world",
}
`;

exports[`api request should execute a GET successfully and return response text 1`] = `"hello"`;

exports[`api request should execute a POST successfully 1`] = `
Object {
  "a": 1,
}
`;

exports[`api request should reject for a  bad request 1`] = `[Error: Request failed with status code 400]`;

exports[`api request should reject for a server error with JSON response 1`] = `[Error: Request failed with status code 500]`;
